implement functionality for message, appointment, records
